# options_simulation

./: .gitignore  analysis.py  corrupted.pkl  download data.ipynb  filtered_df.csv  pyproject.toml  reduce_size.py  results.pkl  simulation demo.ipynb  simulation.py
